# abridgefaraway

./: '  ChangeLog.md  Font.hs  LICENSE  README.md  \  ]  abfa.cabal  abridgefaraway.cabal  cabal.project.local  cabal.sandbox.config  report.html  tags
.cabal-sandbox/: add-source-timestamps  world
.cabal-sandbox/lib/x86_64-linux-ghc-8.0.1/OpenGL-3.0.1.0-IiPHQJho5BE4cNG1fHJ4zL/: libHSOpenGL-3.0.1.0-IiPHQJho5BE4cNG1fHJ4zL.a.REMOVED.git-id
.cabal-sandbox/lib/x86_64-linux-ghc-8.0.1/OpenGLRaw-3.2.3.0-ngqT23TZ2cDcCBwzr4npt/: libHSOpenGLRaw-3.2.3.0-ngqT23TZ2cDcCBwzr4npt-ghc8.0.1.so.REMOVED.git-id  (+1 more)
.cabal-sandbox/x86_64-linux-ghc-8.0.1-packages.conf.d/: AC-Angle-1.0-8nSE537h8nhFDtUTUw6LVB.conf  AC-Vector-2.3.2-Hhn6HGU4foOCybyNZwQyj6.conf  AC-Vector-Fancy-2.4.0-GgBvk2Cocjt7AV7IbLGLS4.conf  Boolean-0.2.3-JYotQglXhtoJXpADNau8XH.conf  FTGL-2.1-IFKk6QAX9MwL4OdupSgLsc.conf  GLFW-b-1.4.8.1-Al6jnUrPA9PAgpgZuphRiw.conf  GLURaw-2.0.0.2-ATKM5ekkZUD6BA8HjfX7rE.conf  GLUT-2.7.0.10-BYguETEkuwmIhw4e04H7Pn.conf  GLUtil-0.9.1.0-BTLkmEmBwYSGlGaHiSQAeP.conf  GPipe-2.1.8-L7UKGEoTTrsFH6pHpSDrB1.conf  JuicyPixels-3.2.8-2m7yVK9j51UF1F7dRciij5.conf  ObjectName-1.1.0.1-HHHIolNI8Pm5H3OGkgSUrO.conf  OpenGL-3.0.1.0-IiPHQJho5BE4cNG1fHJ4zL.conf  OpenGLRaw-3.2.3.0-ngqT23TZ2cDcCBwzr4npt.conf  StateVar-1.1.0.4-CJpWsiXJdd89SnV9dZtTwc.conf  adjunctions-4.3-JgrrwBjdwdsDQhSSMHXHqB.conf  base-orphans-0.5.4-5IQvrjd7gNP548VkOOyIq6.conf  bifunctors-5.4.1-KX0jYbjcpHa7nS1Q55Zd1d.conf  bindings-DSL-1.0.23-GUrVdpTUVQC2JWoov2sGwA.conf  bindings-GLFW-3.1.2.2-14y8Rlh9wxcHUOlWbio9J9.conf  boundingboxes-0.2.3-9PfrQSoVgwoKBgSycTLpV.conf  bytes-0.15.2-EdVHmcSm7AVIEgRBw4kGqz.conf  cereal-0.5.3.0-90KodwwwQanJlL7equBhpB.conf  comonad-5-C7TYJ8z57bx8Ut1XBpbUDR.conf  contravariant-1.4-9eqno2wALMmHh2ooDbhMMS.conf  distributive-0.5.0.2-ABrKtptb3jWJ1Lj8y86dF8.conf  exception-transformers-0.4.0.4-1mbuv0d7d4u9m0kIkCRtyT.conf  exceptions-0.8.3-5OTPYzRazb4DJ75sPncYEh.conf  fixed-0.2.1.1-21JkkJmr6h52cZo1o8cauA.conf  free-4.12.4-6ZWYtkj6Zjr5byvYm3W77f.conf  freetype2-0.1.1-HSw4T9f14sTRBjdEGbgB7.conf  gl-0.7.8.1-3DAylIjJMtQ3fKdWfLMP3X.conf  half-0.2.2.3-BFHx0LiJemg6baNXrjGThF.conf  hashable-1.2.4.0-CiOpYmUSL8fCOfaysGqsmB.conf  hashtables-1.2.1.0-6PtLyqIxPeHLxj0B9SRY49.conf  hpp-0.3.1.0-2jzYFEarQeR4FlYQJH6WMw.conf  hxt-9.3.1.16-7K7ZB5MEwQZ2CH7ICdqORi.conf  hxt-charproperties-9.2.0.1-L1rhanzXQ304SfBOSkeXkX.conf  hxt-regex-xmlschema-9.2.0.3-DrZkVaqhcka8zPjgBegtWX.conf  hxt-unicode-9.0.2.4-AEIThHBnNFILy3JikxDDI3.conf  (+24 more)
dat/dat/shd/: triangle.frag  triangle.vert
dat/shd/: text.frag  text.vert  tile.vert  triangle.frag  triangle.vert
data/: save.txt
data/fonts/cheque/: Cheque-Regular.ttf.sfd
data/maps/paths/: .directory
data/maps/plains/: .directory
data/minion/: minion.controller  minione.anim  minioneidle.anim  minionn.anim  minionne.anim  minionnidle.anim  minionnw.anim  minions.anim  minionscene.unity  minionse.anim  minionsidle.anim  minionsw.anim  minionw.anim  minionwalk.cs  minionwidle.anim
data/unit/wildlife/: Sprite-0001.aseprite
data/zazz/: rocks2.ase
data/zone/fields/: .directory
data/zone/plains/: newplains.aseprite
data/zones/: path10_5.txt  path23_32.txt  path33_23.txt  path5_22.txt  path5_23.txt  path5_24.txt  path5_29.txt  path5_7.txt  path6_22.txt  path6_23.txt  path6_25.txt  path7_22.txt  path7_24.txt  zone16_14.txt  zone17_14.txt  zone18_14.txt  zone23_32.txt  zone33_23.txt  zone5_22.txt  zone5_23.txt  zone5_24.txt  zone5_29.txt  zone5_7.txt  zone6_22.txt  zone6_23.txt  zone6_25.txt  zone7_22.txt  zone7_24.txt
lib/: .Draw.hs.swp  .DrawZone.hs.swp  .Fonts.hs.swp  .GLinit.hs.swp  .GLloop.hs.swp  .GameInit.hs.swp  .Names.hs.swp  .Rand.hs.swp  .Save.hs.swp  .State.hs.swo  .State.hs.swp  .Util.hs.swp  .World.hs.swp  .Zone.hs.swo  .Zone.hs.swp  CB.hs  Draw.hs  DrawZone.hs  Font.hs  FontLoad.hs  FontUtils.hs  Fonts.hs  GLinit.hs  GLloop.hs  GameInit.hs  Namegen.hs  Names.hs  Paths.hs  Rand.hs  Save.hs  Settings.hs  State.hs  Util.hs  World.hs  Zone.hs
mod/base/: base.lua  config.lua  game.lua
mods/base/: base.lua
mods/config/: config.lua  keylayout.lua
src/: .ABFA.hs.swo  .ABFA.hs.swp  .Main.hs.swo  .Main.hs.swp  ABFA.hs  Anamnesis.hs  Artos.hs  Main.hs  Paracletus.hs  UPrelude.hs  tags
src/ABFA/: Data.hs  Draw.hs  Elev.hs  Event.hs  Game.hs  Input.hs  Map.hs  Noise.hs  Rand.hs  Settings.hs  Shell.hs  State.hs  Time.hs  UI.hs  World.hs  Zone.hs  tags
src/Anamnesis/: Data.hs  Draw.hs  Event.hs  Foreign.hs  Init.hs  Map.hs  Util.hs  World.hs
src/Artos/: Data.hs  Except.hs  Log.hs  Queue.hs  Var.hs
src/Epiklesis/: Data.hs  Elems.hs  Lua.hs  Module.hs  Shell.hs  World.hs
src/Font/: Editor.hs  Math.hs  Utils.hs
src/Font/Cacheing/: Text.hs  Types.hs
src/Font/Editor/: Types.hs
src/Font/Editor/Buffer/: Types.hs
src/Font/Rendering/: Buffer.hs  Text.hs
src/Font/Texture/: Load.hs
src/GLUtil/: ABFA.hs  Draw.hs  Font.hs  JuicyTextures.hs  TexLoad.hs  Textures.hs  TypeMapping.hs  UI.hs  Util.hs  tags
src/Game/: .Draw.hs.swp  .Rand.hs.swp  .Road.hs.swo  .Road.hs.swp  .Save.hs.swp  .Settings.hs.swp  .State.hs.swp  .Trees.hs.swp  .Util.hs.swp  .World.hs.swp  .Zone.hs.swo  .Zone.hs.swp  Civ.hs  Data.hs  Draw.hs  Elev.hs  Fits.hs  Font.hs  FontData.hs  FontRenderer.hs  Map.hs  Moon.hs  Noise.hs  Ocean.hs  Paths.hs  Rand.hs  Road.hs  Save.hs  Settings.hs  Sky.hs  State.hs  Sun.hs  Time.hs  Trees.hs  Unit.hs  Util.hs  Volc.hs  World.hs  Zone.hs
src/Paracletus/: Data.hs  Draw.hs  GLFW.hs  Load.hs  Oblatum.hs  TH.hs  Util.hs  Vulkan.hs
src/Paracletus/Oblatum/: Callback.hs  Data.hs  Event.hs  Font.hs  GLFW.hs  Input.hs
src/Paracletus/Vulkan/: Atlas.hs  Buffer.hs  Calc.hs  Command.hs  Data.hs  Desc.hs  Device.hs  Draw.hs  Foreign.hs  Instance.hs  Load.hs  Pipeline.hs  Pres.hs  Shader.hs  Surface.hs  Sync.hs  Texture.hs  Tile.hs  Trans.hs  Vertex.hs
src/src/: Anamnesis.hs  Artos.hs  Main.hs  Paracletus.hs  UPrelude.hs
src/src/Anamnesis/: Data.hs  Event.hs  Foreign.hs  Map.hs  Util.hs
src/src/Artos/: Except.hs  Queue.hs  Var.hs
src/src/Paracletus/: Data.hs  Oblatum.hs  TH.hs  Vulkan.hs
(+4287 files in other folders)
