cabal-version: >=1.10
name: abfa
version: 4.0.0.0
license: BSD3
license-file: LICENSE
maintainer: vincecoghlan@gmail.com
author: Vince Coghlan
category: Game
build-type: Simple
extra-source-files:
    ChangeLog.md

flag dev
    default: True

executable abfa
    main-is: Main.hs
    hs-source-dirs: src
    other-modules: UPrelude
                   Artos
                   Artos.Except
                   Artos.Queue
                   Artos.Var
                   Anamnesis
                   Anamnesis.Data
                   Anamnesis.Event
                   Anamnesis.Foreign
                   Anamnesis.Map
                   Anamnesis.Util
                   Paracletus
                   Paracletus.Data
                   Paracletus.Oblatum
                   Paracletus.Oblatum.Callback
                   Paracletus.Oblatum.Data
                   Paracletus.Oblatum.Event
                   Paracletus.Oblatum.GLFW
                   Paracletus.TH
                   Paracletus.Vulkan
                   Paracletus.Vulkan.Buffer
                   Paracletus.Vulkan.Command
                   Paracletus.Vulkan.Desc
                   Paracletus.Vulkan.Device
                   Paracletus.Vulkan.Draw
                   Paracletus.Vulkan.Foreign
                   Paracletus.Vulkan.Instance
                   Paracletus.Vulkan.Pipeline
                   Paracletus.Vulkan.Pres
                   Paracletus.Vulkan.Shader
                   Paracletus.Vulkan.Sync
                   Paracletus.Vulkan.Texture
                   Paracletus.Vulkan.Trans
                   Paracletus.Vulkan.Vertex
    default-language: Haskell2010
    ghc-options: -O2 -fexcess-precision -threaded -eventlog -rtsopts -feager-blackholing
    build-depends: base
                 , mtl
                 , stm
                 , monad-logger
                 , time
                 , containers
                 , dimensions
                 , process
                 , filepath
                 , directory
                 , GLFW-b
                 , vulkan-api >= 1.3
                 , vector
                 , easytensor
                 , easytensor-vulkan
                 , JuicyPixels
                 , template-haskell
                 , base-unicode-symbols
                 , containers-unicode-symbols
    default-extensions: DataKinds
                        ExplicitForAll
                        FlexibleInstances
                        LambdaCase
                        MagicHash
                        MultiWayIf
                        NamedFieldPuns
                        NegativeLiterals
                        RecordWildCards
                        TypeSynonymInstances
                        UnicodeSyntax
    other-extensions:   AllowAmbiguousTypes
                        BangPatterns
                        ConstraintKinds
                        CPP
                        DeriveGeneric
                        ExistentialQuantification
                        FlexibleContexts
                        GADTs
                        InstanceSigs
                        KindSignatures
                        LiberalTypeSynonyms
                        MonoLocalBinds
                        MultiParamTypeClasses
                        PatternSynonyms
                        PolyKinds
                        RankNTypes
                        ScopedTypeVariables
                        StandaloneDeriving
                        Strict
                        StrictData
                        TemplateHaskell
                        TypeApplications
                        TypeOperators
                        UnboxedTuples
                        UndecidableInstances
                        ViewPatterns
    if flag (dev)
        cpp-options: -DDEVELOPMENT
        ghc-options: -O0 -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -threaded -eventlog -rtsopts
    else
        ghc-options: -O2 -fexcess-precision -threaded -rtsopts -feager-blackholing
